--- a/submittals/data-scientist-intern-2022-spring/datascience-exam/ds-interview-exam.ipynb
+++ b/submittals/data-scientist-intern-2022-spring/datascience-exam/ds-interview-exam.ipynb
@@ -42,6 +42,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## GITHUB USERNAME: \n",
+    "ner-aim\n",
+    "## ds-position: \n",
+    "data-scientist-intern-spring-2022\n",
+    "## mylastname-myfirstname:\n",
+    "Pottapatri,  Pradyumn\n",
+    "## University:\n",
+    "Georgia State University"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exam Questions"
    ]
   },
@@ -78,8 +92,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Answer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if(n<1): return 0\n",
+    "    fib = [1,1]\n",
+    "    p=2\n",
+    "    while(p!=n):\n",
+    "        fib.append(fib[p-1]+fib[p-2])\n",
+    "        p+=1\n",
+    "    return fib[n-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fibonacci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6180339887498947"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci(40)/fibonacci(39)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Q 1.1.2\n",
     "What's the complexity of your implementation?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Since the complexity of the loop is $O(n)$ and there are two operations (append and addition) of $O(1)$, the resulting time complexity is $O(n) + O(1)$ which is $O(n)$. \n",
+    "\n",
+    "* Although, an array is being used to store the values of the series, the space complexity is also $O(n)$."
    ]
   },
   {
@@ -94,6 +176,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Answer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacci2(n):\n",
+    "    if(n<1): return 0\n",
+    "    a=1\n",
+    "    b=1\n",
+    "    p=2\n",
+    "    while(p!=n):\n",
+    "        c=a+b\n",
+    "        a=b\n",
+    "        b=c\n",
+    "        p+=1\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6180339887498947"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci2(40)/fibonacci2(39)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.618033988749895"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci2(500)/fibonacci2(499)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Q 1.1.4\n",
     "What's the complexity of your implementation?"
    ]
@@ -102,8 +250,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The complexity of the above code is $O(n)$ and with 2 iterative and 2 literal operations with $O(1)$ complexity. Hence the time complexity is still $O(n)$.\n",
+    "\n",
+    "* Although the space complexity is reduced to $O(1)$ because no extra space is being used. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Q 1.1.5\n",
     "What are some examples of optimizations that could improve computational performance?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* There are a few methods that can be used to improve the computational performance such as using memoization for better runtime performance. The above methods also have used dynamic programming to calculate the values of fibonnaci series. These methods can calculate fibonacci series with a time complexity of $O(n)$ and space complexity of $O(1)$. Although the memoization has a runtime complexity of $O(log_en)$ using Fibonacci matrix corelation, it also has a space complexity of $O(log_en)$. \n",
+    "\n",
+    "* The best possible way for better complexity is by using Golden ratio $\\phi$ using Benet's formula of $Fibonacci(n) = \\bigg[\\frac{(\\phi)^n - (-\\phi)^n}{\\sqrt{5}}\\bigg]$\n",
+    "\n",
+    "* The above has a runtime complexity of $O(log_en)$ because exponent takes $log_e n$ time to calculate with no extra space to afford i.e. we can make it work in $O(1)$ space.\n",
+    "\n",
+    "PS: An easier way of checking the fibonacci series is using the Golden ratio because the $\\frac{F_n}{F_{n-1}}$ ~  $\\phi$ for most of the time. "
    ]
   },
   {
@@ -169,6 +353,73 @@
     "<img src=https://www.epicurus.com/food/recipes/wp-content/uploads/2015/03/Pi-Day.jpg width=\"480\">\n",
     "\n",
     "Given a uniform random generator $[0,1)$ (e.g., use your language's standard libary to generate random value), write a a function `compute_pi` to compute [$\\pi$](https://en.wikipedia.org/wiki/Pi)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Monte Carlo Method to estimate Pi in a square. Monte Carlo says that number of points for a random object inside a rectangle can give the area of the random object. (From Modelling and Simulation in undergraduate)\n",
+    "\n",
+    "To calculate the area of a circle, we take a square of unit length where the circle's diameter is the line connecting the midpoints of two opposite sides. The ratio of the area of the circle to the square is given by:\n",
+    "\n",
+    "$$\\frac{\\text{Points covering the area of circle}}{\\text{Points covering the area of square}} = \\frac{\\pi*(0.5)^2}{1^2} = \\frac{\\pi}{4}$$\n",
+    "\n",
+    "$$\\implies \\pi = 4*\\frac{\\text{Points covering the area of circle}}{\\text{Points covering the area of square}}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import random as rd\n",
+    "def compute_pi(n):\n",
+    "    c = 0\n",
+    "    s = 0\n",
+    "    for i in range(n^2):\n",
+    "        x = rd.uniform(0,1)\n",
+    "        y = rd.uniform(0,1)\n",
+    "        dist = (x**2+y**2)\n",
+    "        if(dist<=1): c+=1\n",
+    "        s+=1\n",
+    "    return 4*c/s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.123375324935013"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_pi(10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above is a uniform random number generator which estimates Pi. "
    ]
   },
   {
@@ -271,6 +522,35 @@
     "\n",
     "Assume all features are numerical, the dataset contains no NULLS, outliers, etc. and doesn't require any preprocessing.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* \n",
+    "##### Step 1: \n",
+    "    Since the number of features are way higher than that of the class, each of the features needs to be determined with the response variable. For this univariate analysis, there are a number of methods that can be used. The easiest and direct way for the procedure is using Pearson's Correlation to generate high and low noise of the feature and comparing with itself. We compare the p-values of the features and generate correlations with respect to the response variable. Although this works for a linear relationship between the variables. This fails for non-linear variables. \n",
+    "    <br><br>\n",
+    "    \n",
+    "    This can be avoided using the Distance correlation as a counter measure to address the shortcomings of the Pearson's model. Pearson's correlation works well with smaller datasets, but assuming this is a medoicre dataset and all the features are numerical, we can say that Distance Correlation will do a great job. \n",
+    "    \n",
+    "* \n",
+    "##### Step 2:\n",
+    "    Now that we have a good subset we need to split the data into train and test. The normal way would be using 70% and 30% ratio of the splitting the dataset. Although this can cause further problems, like overfitting of bias towards a single kind of label. To ensure the data has been split into proper proportions, we require the data split to be uniform and have class distributions similar to the process of handling Big Data. So we split the data into Train, Validation and Test set. As usual, we train the dataset and outline the work by using the validation set at each epoch or Cross validation to determine the model performance. Later on, the testing set is used to determine the nature of the model.\n",
+    "    <br><br>\n",
+    "    Since we are using the validation set, a bunch of multiclassification models can be used to determine the best for the task. As a general rule of thumb, because all the features are numeric, tree models can be used to determine the task, assuming there is no nulls, outliers and the sample is perfectly balanced. Regardless of the sample being balanced, which is generally not the case with multiclass classification. So we can use oversampling for training the dataset. Training and validation can be done be using the tree models and Boosting models such as Decision Tree, Random Forest, XGBoosting etc. \n",
+    "    \n",
+    "*\n",
+    "##### Step 3:\n",
+    "    Now that we have a good classifier using the hyperparameters working on the good validation set, we need to test the model on the testing set. If the validation error is low i.e. the model performs well on the training data, and the generalization error is high, the model is overfitting on the training dataset. To avoid that, we need to get the hyperparameters properly and assign it to the testing data. We can calculate the generalization error as $E_gen = \\int error(f_d(x),y)p(y,x)dx$, p(y,x) is how often we see y,x. This is the optimistic error generalization. We compare it with different cross-validation of different algorithms."
    ]
   },
   {
